<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">i3d</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_home">i3d</string>

    <color name="white">#FFFFFF</color>
    <color name="green">#00AF33</color>
    <color name="grey">#E0DFDB</color>

    <string name="searchHere">&lt;- Click here or Enter product</string>
    <string name="schneider_logo">Schneider Logo</string>
    <string name="search_button">Search Button</string>
    <string name="scan_button">Scan Button</string>
    <string name="product_name">Product Name</string>
    <string name="product_image">Product Image</string>
    <string name="product_details">Product Details</string>
    <string name="product_type">Product Type</string>
    <string name="segment">Segment</string>
    <string name="country">Country</string>
    <string name="button3d">3D Button</string>
    <string name="server_address">http://ec2-54-218-93-63.us-west-2.compute.amazonaws.com/</string>
    
    <string-array name="product_parts_array">
        <item>Frame</item>
        <item>Rocker</item>
        <item>Encloser</item>   
        <item>Back Ground</item>
        <item>Group</item>
        <item>UnGroup</item>     
    </string-array>
    
    <string-array name="product_color_array">
        <item>Tan</item>
        <item>DimGrey</item>
        <item>SlateGrey</item>
        <item>Brown</item>
        <item>DarkKhaki</item>
        <item>Khaki</item>
        <item>SaddleBrown</item>
        <item>PaleGoldenrod</item>
        <item>DarkSlateGrey</item>
        <item>LemonChiffon</item>
        <item>DarkOliveGreen</item>
        <item>Lavender</item>
        <item>Beige</item>
        <item>Moccasin</item>        
    </string-array>    
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

</resources>